# HelloOpenCV

./: .gitignore  CMakeLists.txt  CoinDetector0.cpp  HelloOpenCV.cpp  HelloOpenCV.sln  HelloOpenCV.vcxproj  HelloOpenCV.vcxproj.filters  coin_files.txt  readme.md
